logo vert. align., fixed fluid container padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -516,6 +516,7 @@ Header
 	.site-logo {
 		max-height: 100px;
 		width: auto;
+		vertical-align: middle;
 	}
 	.site-header {
 		position: fixed;
